; ModuleID = '/home/carl/AnghaBench/linux/drivers/atm/extr_zatm.c_eprom_get_esi.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/atm/extr_zatm.c_eprom_get_esi.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.atm_dev = type { i32 }

@ZEPROM_V1_REG = common dso_local global i32 0, align 4
@ZEPROM_V1_ESI_OFF = common dso_local global i32 0, align 4
@ZEPROM_V2_REG = common dso_local global i32 0, align 4
@ZEPROM_V2_ESI_OFF = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.atm_dev*)* @eprom_get_esi to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @eprom_get_esi(%struct.atm_dev* %0) #0 {
  %2 = alloca %struct.atm_dev*, align 8
  store %struct.atm_dev* %0, %struct.atm_dev** %2, align 8
  %3 = load %struct.atm_dev*, %struct.atm_dev** %2, align 8
  %4 = load i32, i32* @ZEPROM_V1_REG, align 4
  %5 = load i32, i32* @ZEPROM_V1_ESI_OFF, align 4
  %6 = call i64 @eprom_try_esi(%struct.atm_dev* %3, i32 %4, i32 %5, i32 1)
  %7 = icmp ne i64 %6, 0
  br i1 %7, label %8, label %9

8:                                                ; preds = %1
  br label %14

9:                                                ; preds = %1
  %10 = load %struct.atm_dev*, %struct.atm_dev** %2, align 8
  %11 = load i32, i32* @ZEPROM_V2_REG, align 4
  %12 = load i32, i32* @ZEPROM_V2_ESI_OFF, align 4
  %13 = call i64 @eprom_try_esi(%struct.atm_dev* %10, i32 %11, i32 %12, i32 0)
  br label %14

14:                                               ; preds = %9, %8
  ret void
}

declare dso_local i64 @eprom_try_esi(%struct.atm_dev*, i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
